# harvest-hound

./: .dockerignore  .gitignore  .lintstagedrc.js  .pre-commit-config.yaml  CLAUDE.md  docker-compose.dev.yml  docker-compose.yml  package.json  pnpm-lock.yaml  run
prototype/: CLAUDE.md  README.md  app.py  pyproject.toml  requirements.txt
prototype/baml_client/: async_client.py  inlinedbaml.py  parser.py  stream_types.py  sync_client.py  type_builder.py  type_map.py  types.py
prototype/baml_project/: clients.baml  generators.baml
prototype/baml_src/: clients.baml  generators.baml  inventory.baml  recipes.baml
prototype/scripts/: test_pitch_recipe_fidelity.py
prototype/static/: app.js  index.html
src/backend/: CLAUDE.md  __init__.py  alembic.ini  app.py  baml_functions.py  config_routes.py  inventory_routes.py  models.py  pyproject.toml  routes.py  schemas.py  services.py  shopping_list.py
src/backend/baml_client/: __init__.py  async_client.py  inlinedbaml.py  parser.py  stream_types.py  sync_client.py  type_builder.py  type_map.py  types.py
src/backend/baml_src/: clients.baml  dishes.baml  inventory.baml  recipes.baml
src/backend/migrations/: env.py
src/backend/tests/: __init__.py  conftest.py  test_config_api.py  test_flesh_out.py  test_grocery_store_api.py  test_infrastructure.py  test_ingredient_claim.py  test_inventory_api.py  test_multi_wave.py  test_pitch_generation.py  test_pitch_rejection.py  test_pitch_validation.py  test_recipe_detail.py  test_recipe_lifecycle.py  test_recipe_models.py  test_seeding.py  test_session_api.py  test_smoke.py  (+2 more)
(+160 files in other folders)
