[project]
name = "harvest-hound-prototype"
version = "0.1.0"
description = "Rapid discovery prototype for meal planning"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "baml-py>=0.214.0",
    "fastapi>=0.115.6",
    "python-dotenv>=1.0.0",
    "sqlmodel>=0.0.16",
    "sse-starlette>=2.0.0",
    "uvicorn[standard]>=0.30.6",
]

[dependency-groups]
dev = [
    "httpx>=0.27.0",  # For testing endpoints
]
