[project]
name = "harvest-hound"
version = "0.1.0"
description = "Agentic meal planning for CSA deliveries"
requires-python = ">=3.12"
dependencies = [
    "baml-py>=0.214.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "sqlmodel>=0.0.22",
]

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = ["baml_client"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "C90",    # mccabe complexity
    "UP",     # pyupgrade
]

[tool.ruff.lint.mccabe]
max-complexity = 10
